--- a/ui/src/app/shared/variable/list/variable.html
+++ b/ui/src/app/shared/variable/list/variable.html
@@ -1,5 +1,5 @@
 <div class="variable" *ngIf="ready && variableTypes">
-    <nz-row class="ui grid">
+    <nz-row>
         <nz-col [nzOffset]="20" [nzSpan]="4" class="alignRight">
             <input nz-input type="text" placeholder="Filter" [(ngModel)]="filter" (ngModelChange)="filterVariables()">
         </nz-col>
