--- a/ui/src/app/shared/vcs/vcs.strategy.html
+++ b/ui/src/app/shared/vcs/vcs.strategy.html
@@ -35,13 +35,13 @@
             <nz-form-item>
                 <nz-form-label [nzSpan]="3">User</nz-form-label>
                 <nz-form-control [nzSpan]="7">
-                    <input nz-input name="user" type="text" class="ui input" [(ngModel)]="strategy.user">
+                    <input nz-input name="user" type="text" [(ngModel)]="strategy.user">
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
                 <nz-form-label [nzSpan]="3">Password</nz-form-label>
                 <nz-form-control [nzSpan]="7">
-                    <input nz-input name="password" type="password" class="ui input" [(ngModel)]="strategy.password">
+                    <input nz-input name="password" type="password" [(ngModel)]="strategy.password">
                 </nz-form-control>
             </nz-form-item>
         </ng-container>
