--- a/ui/src/app/views/application/show/home/application.home.scss
+++ b/ui/src/app/views/application/show/home/application.home.scss
@@ -1,5 +1,12 @@
 @import '../../../../../common';
+.nzSegment {
+  padding: 20px 20px;
+}
 
+nz-alert {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
 .dashboard {
   text-align: center;
   margin-bottom: 20px;
