--- a/ui/src/app/views/settings/action/add/action.add.scss
+++ b/ui/src/app/views/settings/action/add/action.add.scss
@@ -1,15 +1,3 @@
-@import '../../../../../common';
-.ui.input {
-    position: inherit;
-}
-
-#ActionAdd {
-    display: flex;
-    flex-direction: column;
-    align-content: stretch;
-    height: 100%;
-    padding: 20px;
-    h2 {
-        text-align: center;
-    }
+nz-alert {
+  margin-bottom: 20px;
 }
