--- a/ui/src/app/views/settings/action/edit/action.edit.html
+++ b/ui/src/app/views/settings/action/edit/action.edit.html
@@ -2,43 +2,42 @@
     <app-breadcrumb [path]="path"></app-breadcrumb>
     <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)"></app-tabs>
     <app-scrollview class="scrollview" *ngIf="selectedTab" [ngSwitch]="selectedTab.key">
-        <div *ngSwitchCase="'action'" class="ui grid">
-            <div class="thirteen wide column">
+        <nz-row *ngSwitchCase="'action'">
+            <nz-col [nzSpan]="19">
                 <app-action-form *ngIf="action" [groups]="groups" [action]="action" (save)="actionSave($event)"
                     (delete)="actionDelete()" [loading]="loading"></app-action-form>
-            </div>
-            <div class="three wide column">
+            </nz-col>
+            <nz-col [nzSpan]="5">
                 <app-action-help></app-action-help>
-                <ng-container *ngIf="action">
-                    <br />
-                    <div class="field" *ngIf="action.first_audit">
+                <div class="nzSegment" *ngIf="action">
+                    <div *ngIf="action.first_audit">
                         <h3>{{ "common_created_by" | translate }}</h3>
                         {{ action.first_audit.triggered_by }}
                     </div>
                     <br />
-                    <div class="field" *ngIf="action.last_audit">
+                    <div *ngIf="action.last_audit">
                         <h3>{{ "common_last_modified" | translate }}</h3>
                         {{ action.last_audit.created }}
                     </div>
-                </ng-container>
-            </div>
-        </div>
-        <div *ngSwitchCase="'audits'" class="ui grid">
-            <div class="sixteen wide column">
+                </div>
+            </nz-col>
+        </nz-row>
+        <nz-row *ngSwitchCase="'audits'">
+            <nz-col [nzSpan]="24">
                 <app-data-table [withPagination]="10" [columns]="columnsAudits" [data]="audits" [loading]="loadingAudits"
                     [withLineClick]="true" (clickLine)="clickAudit($event)"></app-data-table>
-            </div>
-            <div class="sixteen wide column">
+            </nz-col>
+            <nz-col [nzSpan]="24">
                 <app-diff-list *ngIf="diffItems" [items]="diffItems"></app-diff-list>
-            </div>
-        </div>
-        <div *ngSwitchCase="'usage'" class="ui grid">
-            <div class="sixteen wide column">
-                <div class="ui active centered inline loader" *ngIf="loadingUsage"></div>
+            </nz-col>
+        </nz-row>
+        <nz-row *ngSwitchCase="'usage'">
+            <nz-col [nzSpan]="24">
+                <nz-spin nzTip="Loading..." *ngIf="loadingUsage"></nz-spin>
                 <ng-container *ngIf="!loadingUsage">
                     <app-action-usage [usage]="usage"></app-action-usage>
                 </ng-container>
-            </div>
-        </div>
+            </nz-col>
+        </nz-row>
     </app-scrollview>
 </div>
