--- a/ui/src/app/views/settings/action/help/action.help.html
+++ b/ui/src/app/views/settings/action/help/action.help.html
@@ -1,9 +1,6 @@
-<div class="three wide column">
-    <div class="ui segment">
-        <h2 class="ui header"><i class="fa fa-book"></i> {{ 'settings_tips' | translate }}</h2>
-        <div class="ui list">
-            <a class="item" href="#" [routerLink]="['/docs', 'docs', 'actions']" target="_blank" rel="noopener noreferrer">{{'action_help_line_1'
+
+    <div class="nzSegment">
+        <h2><span nz-icon nzType="book" nzTheme="outline"></span> {{ 'settings_tips' | translate }}</h2>
+        <a class="item" href="#" [routerLink]="['/docs', 'docs', 'actions']" target="_blank" rel="noopener noreferrer">{{'action_help_line_1'
                 | translate}}</a>
-        </div>
     </div>
-</div>
