--- a/ui/src/app/views/project/show/workflow/workflow.list.html
+++ b/ui/src/app/views/project/show/workflow/workflow.list.html
@@ -4,7 +4,7 @@
             <h3>List of workflows in the project</h3>
         </nz-col>
     </nz-row>
-    <nz-row class="ui row">
+    <nz-row>
         <nz-col [nzSpan]="8">
             <nz-button-group>
                 <button nz-button [nzType]="viewMode === 'blocs'?'primary':'default'" (click)="setViewMode('blocs')">
