--- a/ui/src/app/views/workflow/graph/workflow.graph.html
+++ b/ui/src/app/views/workflow/graph/workflow.graph.html
@@ -1,5 +1,5 @@
 <div class="svg-wrapper" #svgGraph>
-    <button class="ui icon button big" (click)="clickOrigin()">
+    <button nz-button nzSize="large" class="origin" (click)="clickOrigin()">
         <i class="crosshairs icon"></i>
     </button>
 </div>
