--- a/ui/src/app/views/workflow/run/workflow.run.html
+++ b/ui/src/app/views/workflow/run/workflow.run.html
@@ -31,7 +31,7 @@
             </nz-collapse>
         </nz-col>
     </nz-row>
-    <nz-row *ngIf="warnings && warnings.length > 0" class="ui grid">
+    <nz-row *ngIf="warnings && warnings.length > 0">
         <nz-col [nzOffset]="2" [nzSpan]="20">
             <!-- Warning PANEL -->
             <nz-collapse>
