--- a/ui/src/app/views/pipeline/show/admin/pipeline.admin.html
+++ b/ui/src/app/views/pipeline/show/admin/pipeline.admin.html
@@ -1,36 +1,33 @@
 <div class="pipelineAdmin">
-    <app-zone header="{{ 'pipeline_administration' | translate }}" >
-        <app-zone-content>
-            <form class="ui form" (ngSubmit)="updatePipeline()" #projectUpdateFrom="ngForm">
-                <div class="eight wide field">
-                    <label>{{ 'pipeline_name' | translate}}</label>
-                    <input type="text" [(ngModel)]="editablePipeline.name" name="pipname" [disabled]="loading">
-                </div>
-                <div class="sixteen wide field">
-                    <label>{{ 'pipeline_description' | translate}}</label>
-                    <textarea type="text" [(ngModel)]="editablePipeline.description" name="pipdesc" [disabled]="loading">
-                  </textarea>
-                </div>
-                <div class="fields">
-                    <div class="sixteen wide bottom right aligned field">
-                        <button class="ui button green button" [class.disabled]="loading || editablePipeline.from_repository" type="submit">{{ 'btn_save' |
-                            translate }}</button>
-                    </div>
-                </div>
-            </form>
-        </app-zone-content>
-    </app-zone>
-    <app-zone header="{{ 'danger_zone' | translate }}" headerClass="red inverted">
-        <app-zone-content class="bottom">
-            <div class="ui grid">
-                <div class="eight wide column">
-                    <div class="title">{{ 'pipeline_delete_label' | translate}}</div>
-                    <div class="description">{{ 'pipeline_delete_description' | translate}}</div>
-                </div>
-                <div class="eight wide right aligned column">
-                    <app-delete-button [loading]="loading" (event)="deletePipeline()"></app-delete-button>
-                </div>
-            </div>
-        </app-zone-content>
-    </app-zone>
+    <nz-card nzTitle="Settings" class="coloredTitle">
+        <form nz-form #pipelineUpdateFrom="ngForm" (ngSubmit)="updatePipeline()">
+            <nz-form-item>
+                <nz-form-label>Pipeline name</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="text" [(ngModel)]="editablePipeline.name" name="pipname" [disabled]="loading">
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-label>Description</nz-form-label>
+                <nz-form-control>
+                    <textarea nz-input type="text" [(ngModel)]="editablePipeline.description" name="pipdesc" [disabled]="loading"></textarea>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nzJustify="end">
+                <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="loading || editablePipeline.from_repository !== ''" type="submit">Save</button>
+            </nz-form-item>
+        </form>
+    </nz-card>
+    <nz-card nzTitle="Danger zone" class="redTitle">
+        <nz-row>
+            <nz-col [nzSpan]="12">
+                <div class="title">Delete pipeline</div>
+                <div class="description">Once you delete an pipeline, there is no going back. Please be certain.</div>
+            </nz-col>
+            <nz-col [nzSpan]="12" class="alignRight">
+                <button nz-button nzType="primary" nzDanger nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this pipeline ?"
+                        [nzLoading]="loading" (nzOnConfirm)="deletePipeline()">Delete</button>
+            </nz-col>
+        </nz-row>
+    </nz-card>
 </div>
