--- a/ui/src/app/views/pipeline/show/admin/pipeline.admin.html
+++ b/ui/src/app/views/pipeline/show/admin/pipeline.admin.html
@@ -14,7 +14,7 @@
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item nzJustify="end">
-                <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="loading || editablePipeline.from_repository !== ''" type="submit">Save</button>
+                <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="loading || editablePipeline.from_repository !== ''" type="submit" name="updateButton">Save</button>
             </nz-form-item>
         </form>
     </nz-card>
